onyx: Mark wlan driver as not ready on boot
Change-Id: I00ea7651a80681fea3b929e7440b5d47aa775a17

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -186,6 +186,9 @@ on boot
     # Wifi firmware reload path
     chown wifi wifi /sys/module/wlan/parameters/fwpath
 
+    # Mark wifi driver as unloaded - "ok" indicates loaded
+    setprop wlan.driver.status not_ok
+
 on post-fs
     # Reverse Keys
     write /proc/s1302/key_rep 1
